--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-color": "^2.11.5",
+    "@tiptap/extension-heading": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-task-item": "^2.11.5",
+    "@tiptap/extension-task-list": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-text-style": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "googleapis": "^146.0.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
